#################################
#  RobustPalmRoi library cmake  #
#################################

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIBRARY_NAME robust_palm_roi)
PROJECT(${LIBRARY_NAME})

FIND_PACKAGE(OpenCV REQUIRED)

IF(${CMAKE_BUILD_TEST})
        SET(GCC_COVERAGE_COMPILE_FLAGS "-ggdb -coverage -fprofile-arcs -ftest-coverage")
        SET(GCC_COVERAGE_LINK_FLAGS    "-coverage -lgcov")
ENDIF()
SET(CMAKE_CXX_FLAGS  "--std=c++11 ${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")

SET(APP_ROOT ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${APP_ROOT})

FILE(GLOB_RECURSE SRC_FILES *.c *.cc *.cpp)
FILE(GLOB_RECURSE HEADER_FILES *.h *.hpp)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${HEADER_FILES} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${OpenCV_LIBS})
