CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_cpp_sample)
PROJECT(${PROJECT_NAME})

ADD_DEFINITIONS(-std=c++11)

FIND_PACKAGE(robust-palm-roi REQUIRED)

INCLUDE_DIRECTORIES(${ROBUST_PALM_ROI_INCLUDE_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} sample.cpp)

ADD_DEPENDENCIES(${PROJECT_NAME} ${ROBUST_PALM_ROI_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ROBUST_PALM_ROI_LIBRARIES})
